# debsaws

./: pyproject.toml  requirements.txt
debsaws/: asg.py  athena.py  cloudwatch.py  common.py  config.py  dynamodb.py  ec2.py  iot.py  messaging.py  rds.py  s3.py  setup.py  sqllite.py  ssm.py
debsaws.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_debsaws.py
